--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ h1, p{
 }
 
 h1{
-    font-size: 17px;
+    font-size: 35px;
     color: hsl(0, 0%, 100%);
 }
 
@@ -24,19 +24,26 @@ span{
     color: hsl(277, 64%, 61%);
 }
 
+.text_container p{
+    width: 85%;
+    line-height : 25px;
+}
+
 li p:nth-child(2n){
     text-transform:uppercase;
     font-family: 'Lexend Deca';
+    font-weight: 400;
+    color:hsla(0, 0%, 100%, 0.6);
 }
 
-ul{
-    display: flex;
-    justify-content: space-between;
+li{
+    text-align: start;
 }
-    
 
 .white_p{
     color: hsl(0, 0%, 100%);
+    font-weight: 700;
+    font-size: larger;
 }
 
 .grid{
@@ -52,12 +59,16 @@ ul{
 
 .text_block{
     background-color: hsl(244, 38%, 16%);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    align-items: center;
+    display: flex;
 }
 
 .text_container{
-   width: 80%;
+   width: 70%;
    margin: 0 auto; 
-   height: 100%;
+   height: 70%;
    flex-direction: column;
    justify-content: space-around;
    display: flex;
@@ -67,9 +78,13 @@ ul{
     background-image: linear-gradient(hsl(277, 64%, 61%, 0.4), hsl(277, 64%, 61%, 0.4)),url('images/image-header-desktop.jpg');
     background-size: cover;
     height: 500px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 ul{
     display: flex;
     list-style: none;
+    justify-content: space-between;
+    width: 85%;
 }
